# libnvme

./: .gitignore  Makefile  README.md  configure  meson.build  pyproject.toml
.github/workflows/: build.yml  checkpatch.yml  coverage.yml  docs.yaml  meson.yml  python-publish.yml  release-python.yml  release.yml
ccan/: config.h
ccan/tools/configurator/: configurator.c
doc/: config-schema.json  libnvme.rst  meson.build
doc/man/: enum nvme_constants.2  nbft_control.2  nbft_desc_type.2  nbft_discovery.2  nbft_header.2  nbft_hfi.2  nbft_hfi_info_tcp.2  nbft_host.2  nbft_info.2  nbft_info_discovery.2  nbft_info_hfi.2  nbft_info_hfi_info_tcp.2  nbft_info_host.2  nbft_info_nid_type.2  nbft_info_primary_admin_host_flag.2  nbft_info_security.2  nbft_info_subsystem_ns.2  nbft_security.2  nbft_security_flags.2  nbft_ssns.2  nbft_ssns_ext_info.2  nbft_ssns_flags.2  nbft_ssns_trflags.2  nbft_trtype.2  nvme_acq.2  nvme_admin_opcode.2  nvme_admin_passthru.2  nvme_admin_passthru64.2  nvme_ae_info_css_nvm.2  nvme_ae_info_error.2  nvme_ae_info_notice.2  nvme_ae_info_smart.2  nvme_ae_type.2  nvme_aggregate_endurance_group_event.2  nvme_aggregate_predictable_lat_event.2  nvme_ana_group_desc.2  nvme_ana_log.2  nvme_ana_state.2  nvme_apst_entry.2  nvme_aqa.2  (+973 more)
doc/rst/: api-types.rst  linux.rst  mi.rst  util.rst
examples/: discover-loop.c  display-columnar.c  display-tree.c  meson.build  mi-conf.c  mi-mctp-ae.c  mi-mctp-csi-test.c  mi-mctp.c  telemetry-listen.c
libnvme/: meson.build  nvme.i  setup.py
pynvme/: meson.build  nvme.i
scripts/: build.sh  generate-sym-test.py  get-modified-src-files.py
src/: Makefile  libnvme-mi.map  libnvme.h  libnvme.map  meson.build  mi_mctp_internal.h
src/nvme/: api-types.h  crypto_services.c  crypto_services.h  fabrics.c  fabrics.h  filters.c  filters.h  handle.c  handle.h  ioctl.c  ioctl.h  json.c  linux.c  linux.h  log.c  log.h  mi-mctp.c  mi.c  mi.h  nbft.c  nbft.h  no-quirks.c  private.h  quirks.c  quirks.h  sysfs.h  tree.c  tree.h  types.h  util.c  util.h
test/: cpp.cc  meson.build  mi-mctp.c  mi.c  psk.c  quirks.c  quirks.json  register.c  test-tcp-ctrl-lkup.py  test-util.c  test.c  tree.c  zns.c
test/config/: config-dump.c  hostnqn-order.c  meson.build  psk-json.c
test/ioctl/: ana.c  discovery.c  features.c  identify.c  logs.c  meson.build  misc.c  zns.c
test/nbft/: meson.build  nbft-dump.c
test/nbft/diffs/: NBFT-synthetic-security
test/nbft/tables/: NBFT-synthetic-security
test/sysfs/: meson.build  sysfs.c  tree-dump.c
test/sysfs/data/: empty.out
