# SPDX-License-Identifier: LGPL-2.1-or-later
[build-system]
requires = ["mesonpep517", "wheel", "meson", "ninja"] # PEP 508 specifications.
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
summary="python bindings for libnvme"

[project]
name = "libnvme"
dynamic = ["version"]
description = "Provides library functions for accessing and managing nvme devices on a Linux system."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "LGPL-2.1-or-later" }

authors = [
    { name = "Hannes Reinecke", email = "hare@suse.de" }
]

keywords = ["SPDK", "storage", "nvme", "performance", "bindings"]

classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
"Homepage" = "https://github.com/linux-nvme/libnvme"
"Source" = "https://github.com/linux-nvme/libnvme"
"Bug Tracker" = "https://github.com/linux-nvme/libnvme/issues"

